Get specs compiling with grunt
Still run using ruby. I don't have time to rewrite them to mocha or
something right now, nor reinstalling plain jasmine.

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -1,9 +1,9 @@
 src_files:
     - "spec/support/fake_plugin_interface.js"
-    - "*.js"
+    - "js/*.js"
 
 spec_files:
-    - "*spec.js"
+    - "js/*spec.js"
 
 stylesheets:
 helpers:
